fixed overlapping error message on city field

--- a/client/src/styles/pages/claim/personal.module.scss
+++ b/client/src/styles/pages/claim/personal.module.scss
@@ -10,6 +10,9 @@
   width: 10rem !important;
   margin-right: 2rem !important;
 }
+.city_error {
+  padding-right: 2rem;
+}
 
 .state {
   width: 8rem !important;
